--- a/sass/main.scss
+++ b/sass/main.scss
@@ -496,6 +496,7 @@ html {
 			&__link {
 				display: flex;
 				align-items: center;
+				text-align: center;
 				margin: 15px 0;
 				padding: 10px;
 				text-decoration: none;
